--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,6 +26,35 @@ h3 {
     background: #051B67;
 }
 
+.searchbar p {
+    float: left;
+    font-size: 167.5%;
+    width: 100%;
+    color: #E9EDFC;
+}
+
+.pokedex-search-input-items, .searchbar p{
+    margin-left: 7.2525%;
+}
+
+.pokedex-search-input-items{
+    position: relative;
+    height: 48px;
+    padding-top: 13px;
+    width: 100%;
+    display: inline-flex;
+    margin-bottom: 1em;
+}
+
+.buttonSearch{
+    float: left;
+    width: 12.95%;
+    position: relative;
+    margin-top: unset;
+    border: 1px solid #E9EDFC;
+    border-radius: 32px;
+}
+
 .buttonSearch, .btn-filter, .btn, input[type="checkbox"]{
     cursor: pointer;
 }
@@ -53,14 +82,9 @@ h3 {
 
 /* filter */
 section.pokedex.filter {
-    /* width:80%; */
     margin: 0 auto;
     background: #E9EDFC;
-    /* background: #90a4ef; */
     display: grid;
-    /* gap: 1em;
-    padding-top: 50px;
-    padding-bottom: 50px; */
 }
 
 .pokedex-filter-padding{
@@ -85,8 +109,6 @@ section.pokedex.filter {
     font-size: 20px;
     padding: 30px 0 30px;
     cursor: pointer;
-    /* color: #001A49; */
-    /* justify-content: space-between; */
     justify-content: center;
 }
 
@@ -202,7 +224,6 @@ section.pokedex.filter {
     height: 200px;
     width: 100%;
     margin-top: -2em;
-    /* border-radius: 10px; */
 }
 
 .pokemonList .item .glass .pokemonName{
@@ -237,7 +258,7 @@ section.pokedex.filter {
     display: flex;
     justify-content: end;
     padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-bottom: 7.5rem;
     background:#E9EDFC;
 }
 
