--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,6 +159,54 @@ section.pokedex.filter {
     display: block;
 }
 
+/* loader */
+
+.loader__container{
+    width: 80%;
+    margin: 0 auto;
+    align-content: center;
+    background: #E9EDFC;
+    display: flex;
+    justify-content: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+.loader{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    animation: spin 1.2s linear infinite;
+}
+
+.loader::before, .loader::after{
+    content: '';
+    position: absolute;
+    border-radius: inherit;
+}
+
+.loader::before{
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg,
+    #f0c 0%,
+    #80f 100%);
+}
+
+.loader::after{
+    width: 85%;
+    height: 85%;
+    background: #E9EDFC;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+    to{
+        transform: rotate(360deg);
+    }
+}
+
 /* pokemon list */
 .button-white-tt-input{
     position: relative; 
@@ -275,7 +323,7 @@ section.pokedex.filter {
 @media (max-width:1100px){
     /*responsive Contact form*/
 
-    .pokemonList, .header-content, .buttons{
+    .pokemonList, .header-content, .buttons, .loader__container{
         width: 90%;
     }
 }
@@ -320,7 +368,7 @@ section.pokedex.filter {
         grid-template-columns: repeat(1, 1fr);
     }
 
-    .nav-item-color button, .nav-item-region button, .nav-item button{
+    .nav-item-color button, .nav-item-region button, .nav-item button, .loader__container{
         width: 80%;
     }
 
